--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 bit_field = "0.10.2"
 defmt = { version = "0.3.8", optional = true }
 embedded-hal = "1.0.0"
-shared-bus = "0.3.1"
+num_enum = { version = "0.7.2", default-features = false }
 
 [dev-dependencies]
 paste = "1.0.15"
@@ -16,3 +16,4 @@ paste = "1.0.15"
 defmt = ["dep:defmt"]
 dldo1-1v4 = []
 dldo2-1v4 = []
+std = ["num_enum/std"]
